--- a/cv/proga_ot_boga.ipynb
+++ b/cv/proga_ot_boga.ipynb
@@ -6,6 +6,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def calibration(x_array, y_array):\n",
+    "        rectangle_calibrovka = [0, 0, 0, 0]\n",
+    "        ###find top position###\n",
+    "        top = [0, 0]\n",
+    "        for i in range(len(y_array)):\n",
+    "            if y_array[i] > top[1]:\n",
+    "                top[0] = x_array[i]\n",
+    "                top[1] = y_array[i]\n",
+    "        ###find left position###\n",
+    "        left = [0, 0]\n",
+    "        left[0] = 10e10\n",
+    "        for i in range(len(x_array)):\n",
+    "            if x_array[i] < left[0]:\n",
+    "                left[0] = x_array[i]\n",
+    "                left[1] = y_array[i]\n",
+    "        ###find right position###\n",
+    "        right = [0, 0]\n",
+    "        right[0] = 0\n",
+    "        for i in range(len(x_array)):\n",
+    "            if x_array[i] > right[0]:\n",
+    "                right[0] = x_array[i]\n",
+    "                right[1] = y_array[i]\n",
+    "        ###find botom position###\n",
+    "        bottom = [0, 0]\n",
+    "        bottom[1] = 10e10\n",
+    "        for i in range(len(y_array)):\n",
+    "            if y_array[i] < botom[1]:\n",
+    "                bottom[0] = x_array[i]\n",
+    "                bottom[1] = y_array[i]\n",
+    "        #cv2.rectangle(img,(left[0], up[1]),(right[0]+dev1, down[1]+dev2),(255,0,255),3)\n",
+    "            \n",
+    "        rectangle_calibrovka[0] = left[0]\n",
+    "        rectangle_calibrovka[1] = up[1]\n",
+    "        rectangle_calibrovka[2] = right[0]+size_cell_x\n",
+    "        rectangle_calibrovka[3] = down[1]+size_cell_y\n",
+    "                    \n",
+    "        return rectangle_calibrovka"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def detect_marker (img, color):\n",
     "    #color = [hsv_min, hsv_max]\n",
     "    \n",
@@ -233,6 +278,7 @@
     "#         return top, left, right, botom\n",
     "\n",
     "    def calibration(self, finish):\n",
+    "        rectangle_calibrovka = [0, 0, 0, 0]\n",
     "        if finish == True:\n",
     "            find()\n",
     "            x_array.append(x_marker)\n",
@@ -265,8 +311,14 @@
     "                if y_array[i] < botom[1]:\n",
     "                    bottom[0] = x_array[i]\n",
     "                    bottom[1] = y_array[i]\n",
+    "            #cv2.rectangle(img,(left[0], up[1]),(right[0]+dev1, down[1]+dev2),(255,0,255),3)\n",
+    "            \n",
+    "            rectangle_calibrovka[0] = left[0]\n",
+    "            rectangle_calibrovka[1] = up[1]\n",
+    "            rectangle_calibrovka[2] = right[0]+size_cell_x\n",
+    "            rectangle_calibrovka[3] = down[1]+size_cell_y\n",
     "                    \n",
-    "        return top, left, right, bottom\n",
+    "        return rectangle_calibrovka\n",
     "\n",
     "\n",
     "\n",
@@ -441,7 +493,9 @@
     "    \n",
     "    marker_coord = mark_track.detect_marker(img, colors)\n",
     "    \n",
-    "    mark_track.find_marker_place (img, marker_coord, size_cell_x, size_cell_y, color)\n",
+    "    coord_rectang = mark_track.find_marker_place(img, marker_coord, size_cell_x, size_cell_y, color)\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    \n",
     "    if up != [0, 0] and right != [0, 0] and left != [0, 0] and down != [0, 0]:\n",
